# WhiteHouse

./: CNAME  Connection.java  IF.js  InteractionManager.java  Makefile.am  PaintManager.java  README.md  RoomDialog.java  RoomManager.java  WhiteHouse.java  build.sh  com.idioticdev.whitehouse.gschema.xml  configure.ac  index.html  style.css
pkg/deb/: changelog  control  copyright
resources/: Makefile.am  com.idioticdev.whitehouse.gschema.xml  white-house.desktop.in
src/: AboutDialog.vala  AutoMapper.vala  AutomapDialog.vala  Drawable.vala  Handle.vala  Makefile.am  Map.vala  MenuBar.vala  Passage.vala  Preferences.vala  Room.vala  RoomDialog.vala  Tab.vala  TextView.vala  Window.vala
